test/bluejay/ill-typed/rec_polymorphism.caprice
(* TEST
  include refutable;
*)

let rec f (type a') (a : a') (i : int) : a' =
  if i == 0
  then i (* ERROR: should be a *)
  else f a' a (i - 1)

let res = f int 1 2
